# weather-data-pipeline

./: .env.example  .gitignore  BEFORE_AFTER_COMPARISON.md  CHANGES_SUMMARY.txt  CODE_HIGHLIGHTS.md  COMPREHENSIVE_REVIEW_SUMMARY.md  CONTRIBUTING.md  CRITICAL-003_FIX_SUMMARY.md  DATABASE_IMPLEMENTATION.md  DEBUG_ANALYSIS.md  FINAL_CODE_REVIEW.md  FIXES_APPLIED.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PRD_weather_pipeline.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SECURITY_FIX_DEMO.py  SECURITY_FIX_EXAMPLE.md  SECURITY_VERIFICATION_REPORT.md  VALIDATION_IMPLEMENTATION.md  docker-compose.yml  example_usage.py  pyproject.toml  test_db_fixes.py  test_validation.py  validate_database.sh  verify_fixes.sh  verify_setup.py
dashboard/: ARCHITECTURE.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICKSTART.md  README.md  __init__.py  app.py  check_setup.py  queries.py
docs/: API.md  ARCHITECTURE.md  PERFORMANCE.md  SETUP.md
docs/archive/: ARCHITECTURE_REVIEW.md  CODE_REVIEW.md  DATABASE_SETUP.md  DEBUGGING_README.md  DEBUG_QUICK_REFERENCE.md  DEBUG_SUMMARY.md  PERFORMANCE_REVIEW.md  PERFORMANCE_SUMMARY.md  QUICKSTART_OPTIMIZATION.md  README.md  SCHEMA_DOCUMENTATION.md  SECURITY_FIX_SUMMARY.md
scripts/: README.md  benchmark.py  load_test.py  profile_pipeline.py  profile_queries.sql
sql/: queries.sql  schema.sql
src/: __init__.py  extract.py  load.py  pipeline.py  transform.py
tests/: test_extract.py
